tests/positive/constant_channel_capacity.safe
-- Test: constant_channel_capacity
-- Description: Local integer constant used in a channel capacity.
-- Expected: ACCEPT

package Constant_Channel_Capacity

   Capacity_Value : constant Integer = 3;
   type Message is range 0 to 10;
   channel Data_Ch : Message capacity Capacity_Value;

