tests/negative/neg_task_shared_variable.safe
-- Test: neg_task_shared_variable
-- Description: Two tasks access the same package global directly.
-- Expected: REJECT task_variable_ownership

package neg_task_shared_variable

   type counter is range 0 to 100;

   shared : counter = 0;

   task a

      loop
         shared = shared + 1;



   task b

      loop
         shared = shared + 1;




